--- a/portfolio.html
+++ b/portfolio.html
@@ -19,25 +19,27 @@
 
 <body>
     <!-- site nav -->
-    <header class="page-header">
+    <header class="header">
         <div class="container">
-            <div class="header-container">
-                <nav class="nav">
-                    <a href="./index.html" class="logo link">Web<span class="logo-black">Studio</span></a>
-                    <ul class="nav-list list">
-                        <li class="nav-item"><a class="nav-link link" href="./index.html">Студія</a></li>
-                        <li class="nav-item"><a class="nav-link link current" href="./portfolio.html">Портфоліо</a></li>
-                        <li class="nav-item"><a class="nav-link link" href="">Контакти</a></li>
+            <div class="header__container">
+                <nav class="site-nav">
+                    <a href="./index.html" class="logo link">Web<span class="logo__text">Studio</span></a>
+                    <ul class="site-nav__list list">
+                        <li class="site-nav__item"><a class="site-nav__link link" href="./index.html">Студія</a></li>
+                        <li class="site-nav__item"><a class="site-nav__link link site-nav__link--current"
+                                href="./portfolio.html">Портфоліо</a></li>
+                        <li class="site-nav__item"><a class="site-nav__link link" href="">Контакти</a></li>
                     </ul>
                 </nav>
                 <ul class="contacts-list list">
-                    <li class="contacts-item"><a class="contacts-link link" href="mailto:info@devstudio.com" lang="en">
-                            <svg class="contacts-logo-icon" width="16" height="12">
+                    <li class="contacts-list__item"><a class="contacts-list__link link" href="mailto:info@devstudio.com"
+                            lang="en">
+                            <svg class="contacts-list__logo-icon" width="16" height="12">
                                 <use href="./img/icons.svg#icon-mail"></use>
                             </svg>info@devstudio.com
                         </a></li>
-                    <li class="contacts-item"><a class="contacts-link link" href="tel:+380961111111">
-                            <svg class="contacts-logo-icon" width="10" height="16">
+                    <li class="contacts-list__item"><a class="contacts-list__link link" href="tel:+380961111111">
+                            <svg class="contacts-list__logo-icon" width="10" height="16">
                                 <use href="./img/icons.svg#icon-phone"></use>
                             </svg>+38 096 111 11 11
                         </a>
@@ -48,7 +50,7 @@
     </header>
     <main>
         <!-- portfolio html -->
-        <section class="section">
+        <section class="portfolio-section">
             <div class="container">
                 <h1 class="visually-hidden">Portfolio</h1>
                 <ul class="filter-list list">
@@ -201,7 +203,7 @@
         <div class="container">
             <div class="footer-box">
                 <div class="footer-container">
-                    <a href="./index.html" class="logo logo-footer link">Web<span class="logo-white">Studio</span></a>
+                    <a href="./index.html" class="logo logo-footer link">Web<span class="footer__logo">Studio</span></a>
                     <address class="address">
                         <ul class="address-list list">
                             <li class="address-item"><a class="address-link-map link"
