--- a/portfolio.html
+++ b/portfolio.html
@@ -203,51 +203,48 @@
         <div class="container">
             <div class="footer-box">
                 <div class="footer-container">
-                    <a href="./index.html" class="logo logo-footer link">Web<span class="footer__logo">Studio</span></a>
+                    <a href="./index.html" class="logo link">Web<span class="footer__logo">Studio</span></a>
                     <address class="address">
-                        <ul class="address-list list">
-                            <li class="address-item"><a class="address-link-map link"
+                        <ul class="address__list list">
+                            <li class="address__item"><a class="address__link-map link"
                                     href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank"
                                     rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a></li>
-                            <li class="address-item"><a class="address-link link" href="mailto:info@devstudio.com"
+                            <li class="address__item"><a class="address__link link" href="mailto:info@devstudio.com"
                                     lang="en">info@devstudio.com</a></li>
-                            <li class="address-item"><a class="address-link link" href="tel:+380961111111">+38 096 111
+                            <li class="address__item"><a class="address__link link" href="tel:+380961111111">+38 096 111
                                     11
                                     11</a>
                             </li>
                         </ul>
                     </address>
                 </div>
-                <div class="footer-join-container">
+                <div class="footer-net">
                     <p class="footer-text">Приєднуйтесь</p>
-                    <ul class="footer-list list">
-                        <li class="footer-net-item"><a href="" class="footer-net-link"><svg class="footer-net-icon"
+                    <ul class="footer-net__list list">
+                        <li class="footer-net__item"><a href="" class="footer-net__link"><svg class="footer-net__icon"
                                     width="20" height="20">
                                     <use href="./img/icons.svg#icon-instagram"></use>
                                 </svg></a></li>
-                        <li class="footer-net-item"><a href="" class="footer-net-link"><svg class="footer-net-icon"
-                                    width="20" height="20">
+                        <li class="footer-net__item"><a href="" class="footer-net__link"><svg width="20" height="20">
                                     <use href="./img/icons.svg#icon-twitter"></use>
                                 </svg></a></li>
-                        <li class="footer-net-item"><a href="" class="footer-net-link"><svg class="footer-net-icon"
-                                    width="20" height="20">
+                        <li class="footer-net__item"><a href="" class="footer-net__link"><svg width="20" height="20">
                                     <use href="./img/icons.svg#icon-facebook"></use>
                                 </svg></a></li>
-                        <li class="footer-net-item"><a href="" class="footer-net-link"><svg class="footer-net-icon"
-                                    width="20" height="20">
+                        <li class="footer-net__item"><a href="" class="footer-net__link"><svg width="20" height="20">
                                     <use href="./img/icons.svg#icon-linkedin"></use>
                                 </svg></a></li>
                     </ul>
                 </div>
                 <div class="footer-form-container">
-                    <p class="footer-form-label" for="footer-person-email">Підпишіться на розсилку</p>
-                    <form class="footer-form-control">
-                        <input class="footer-form-input" id="footer-person-email" type="email"
+                    <p class="footer-text" for="footer-person-email">Підпишіться на розсилку</p>
+                    <form class="footer-form">
+                        <input class="footer-form__input" id="footer-person-email" type="email"
                             name="footer-person-email" placeholder="E-mail">
-                        <div class="footer-send-button">
-                            <button class="footer-button primary-button" type="submit" data-modal-open>Підписатися
+                        <div class="footer-form__send-button">
+                            <button class="footer-form__button primary-button" type="submit" data-modal-open>Підписатися
                             </button>
-                            <svg class="footer-button-icon" width="24px" height="24px">
+                            <svg class="footer-form__icon" width="24px" height="24px">
                                 <use href="./img/icons.svg#icon-send-form"></use>
                             </svg>
                         </div>
