--- a/portfolio.html
+++ b/portfolio.html
@@ -54,143 +54,154 @@
             <div class="container">
                 <h1 class="visually-hidden">Portfolio</h1>
                 <ul class="filter-list list">
-                    <li class="filter-item"><button class="filter-button" type="button">Усі</button></li>
-                    <li class="filter-item"><button class="filter-button" type="button">Веб-сайти</button></li>
-                    <li class="filter-item"><button class="filter-button" type="button">Додатки</button></li>
-                    <li class="filter-item"><button class="filter-button" type="button">Дизайн</button></li>
-                    <li class="filter-item"><button class="filter-button" type="button">Маркетинг</button></li>
+                    <li><button class="filter-button" type="button">Усі</button></li>
+                    <li><button class="filter-button" type="button">Веб-сайти</button></li>
+                    <li><button class="filter-button" type="button">Додатки</button></li>
+                    <li><button class="filter-button" type="button">Дизайн</button></li>
+                    <li><button class="filter-button" type="button">Маркетинг</button></li>
                 </ul>
                 <!-- cards-list -->
                 <ul class="card-list list">
-                    <li class="cards-item">
-                        <a class="portfolio-link link" href="">
-                            <div class="bloc-cards-image"><img class="cards-image" src="./img/portfolio/img.jpg"
-                                    alt="сірий ноутбук" width="370">
-                                <p class="cards-overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем
+                    <li class="card-list__item">
+                        <a class="card-list__link link" href="">
+                            <div class="card-list__block">
+                                <img class="card-list__image" src="./img/portfolio/img.jpg" alt="сірий ноутбук"
+                                    width="370">
+                                <p class="card-list__overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем
                                     функціоналу та сервісів. Все це дозволить відвідувачу отримати
                                     вичерпні відомості про компанію чи приватну особу.</p>
                             </div>
-                            <div class="cards-container">
-                                <h2 class="cards-title">Технокряк</h2>
-                                <p class="cards-text">Веб-сайт</p>
+                            <div class="card-list__container">
+                                <h2 class="card-list__title">Технокряк</h2>
+                                <p class="card-list__text">Веб-сайт</p>
                             </div>
                         </a>
                     </li>
-                    <li class="cards-item">
-                        <a class="portfolio-link link" href="">
-                            <div class="bloc-cards-image">
-                                <img class="cards-image" src="./img/portfolio/img-1.jpg" alt="гра в баскетбол"
+                    <li class="card-list__item">
+                        <a class="card-list__link link" href="">
+                            <div class="card-list__block">
+                                <img class="card-list__image" src="./img/portfolio/img-1.jpg" alt="гра в баскетбол"
                                     width="370">
-                                <p class="cards-overlay-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                <p class="card-list__overlay-text">Lorem ipsum dolor sit amet consectetur adipisicing
+                                    elit.
                                     Cumque quis sed veritatis nisi deserunt et, totam magni aliquid quos blanditiis
                                     placeat quas sequi, repellendus culpa soluta eum eaque in non?</p>
                             </div>
-                            <div class="cards-container">
-                                <h2 class="cards-title">Постер New Orlean vs Golden Star</h2>
-                                <p class="cards-text">Дизайн</p>
+                            <div class="card-list__container">
+                                <h2 class="card-list__title">Постер New Orlean vs Golden Star</h2>
+                                <p class="card-list__text">Дизайн</p>
                             </div>
                         </a>
                     </li>
-                    <li class="cards-item">
-                        <a class="portfolio-link link" href="">
-                            <div class="bloc-cards-image">
-                                <img class="cards-image" src="./img/portfolio/img-2.jpg" alt="лого ресторану"
+                    <li class="card-list__item">
+                        <a class="card-list__link link" href="">
+                            <div class="card-list__block">
+                                <img class="card-list__image" src="./img/portfolio/img-2.jpg" alt="лого ресторану"
                                     width="370">
-                                <p class="cards-overlay-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                <p class="card-list__overlay-text">Lorem ipsum dolor sit amet consectetur adipisicing
+                                    elit.
                                     Cumque quis sed veritatis nisi deserunt et, totam magni aliquid quos blanditiis
                                     placeat quas sequi, repellendus culpa soluta eum eaque in non?</p>
                             </div>
-                            <div class="cards-container">
-                                <h2 class="cards-title">Ресторан Seafood</h2>
-                                <p class="cards-text">Додаток</p>
+                            <div class="card-list__container">
+                                <h2 class="card-list__title">Ресторан Seafood</h2>
+                                <p class="card-list__text">Додаток</p>
                             </div>
                         </a>
                     </li>
-                    <li class="cards-item">
-                        <a class="portfolio-link link" href="">
-                            <div class="bloc-cards-image">
-                                <img class="cards-image" src="./img/portfolio/img-3.jpg" alt="навушники" width="370">
-                                <p class="cards-overlay-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    <li class="card-list__item">
+                        <a class="card-list__link link" href="">
+                            <div class="card-list__block">
+                                <img class="card-list__image" src="./img/portfolio/img-3.jpg" alt="навушники"
+                                    width="370">
+                                <p class="card-list__overlay-text">Lorem ipsum dolor sit amet consectetur adipisicing
+                                    elit.
                                     Cumque quis sed veritatis nisi deserunt et, totam magni aliquid quos blanditiis
                                     placeat quas sequi, repellendus culpa soluta eum eaque in non?</p>
                             </div>
-                            <div class="cards-container">
-                                <h2 class="cards-title">Проєкт Prime</h2>
-                                <p class="cards-text">Маркетинг</p>
+                            <div class="card-list__container">
+                                <h2 class="card-list__title">Проєкт Prime</h2>
+                                <p class="card-list__text">Маркетинг</p>
                             </div>
                         </a>
                     </li>
-                    <li class="cards-item">
-                        <a class="portfolio-link link" href="">
-                            <div class="bloc-cards-image">
-                                <img class="cards-image" src="./img/portfolio/img-4.jpg" alt="дві коробки" width="370">
-                                <p class="cards-overlay-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    <li class="card-list__item">
+                        <a class="card-list__link link" href="">
+                            <div class="card-list__block">
+                                <img class="card-list__image" src="./img/portfolio/img-4.jpg" alt="дві коробки"
+                                    width="370">
+                                <p class="card-list__overlay-text">Lorem ipsum dolor sit amet consectetur adipisicing
+                                    elit.
                                     Cumque quis sed veritatis nisi deserunt et, totam magni aliquid quos blanditiis
                                     placeat quas sequi, repellendus culpa soluta eum eaque in non?</p>
                             </div>
-                            <div class="cards-container">
-                                <h2 class="cards-title">Проєкт Boxes</h2>
-                                <p class="cards-text">Додаток</p>
+                            <div class="card-list__container">
+                                <h2 class="card-list__title">Проєкт Boxes</h2>
+                                <p class="card-list__text">Додаток</p>
                             </div>
                         </a>
                     </li>
-                    <li class="cards-item">
-                        <a class="portfolio-link link" href="">
-                            <div class="bloc-cards-image">
-                                <img class="cards-image" src="./img/portfolio/img-5.jpg"
+                    <li class="card-list__item">
+                        <a class="card-list__link link" href="">
+                            <div class="card-list__block">
+                                <img class="card-list__image" src="./img/portfolio/img-5.jpg"
                                     alt="монітор з зображенням мапи" width="370">
-                                <p class="cards-overlay-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                <p class="card-list__overlay-text">Lorem ipsum dolor sit amet consectetur adipisicing
+                                    elit.
                                     Cumque quis sed veritatis nisi deserunt et, totam magni aliquid quos blanditiis
                                     placeat quas sequi, repellendus culpa soluta eum eaque in non?</p>
                             </div>
-                            <div class="cards-container">
-                                <h2 class="cards-title">Inspiration has no Borders</h2>
-                                <p class="cards-text">Веб-сайт</p>
+                            <div class="card-list__container">
+                                <h2 class="card-list__title">Inspiration has no Borders</h2>
+                                <p class="card-list__text">Веб-сайт</p>
                             </div>
                         </a>
                     </li>
-                    <li class="cards-item">
-                        <a class="portfolio-link link" href="">
-                            <div class="bloc-cards-image">
-                                <img class="cards-image" src="./img/portfolio/img-6.jpg" alt="журнал з фотографіями"
+                    <li class="card-list__item">
+                        <a class="card-list__link link" href="">
+                            <div class="card-list__block">
+                                <img class="card-list__image" src="./img/portfolio/img-6.jpg"
+                                    alt="журнал з фотографіями" width="370">
+                                <p class="card-list__overlay-text">Lorem ipsum dolor sit amet consectetur adipisicing
+                                    elit.
+                                    Cumque quis sed veritatis nisi deserunt et, totam magni aliquid quos blanditiis
+                                    placeat quas sequi, repellendus culpa soluta eum eaque in non?</p>
+                            </div>
+                            <div class="card-list__container">
+                                <h2 class="card-list__title">Видання Limited Edition</h2>
+                                <p class="card-list__text">Дизайн</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="card-list__item">
+                        <a class="card-list__link link" href="">
+                            <div class="card-list__block">
+                                <img class="card-list__image" src="./img/portfolio/img-7.jpg" alt="бірка з написами"
                                     width="370">
-                                <p class="cards-overlay-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                <p class="card-list__overlay-text">Lorem ipsum dolor sit amet consectetur adipisicing
+                                    elit.
                                     Cumque quis sed veritatis nisi deserunt et, totam magni aliquid quos blanditiis
                                     placeat quas sequi, repellendus culpa soluta eum eaque in non?</p>
                             </div>
-                            <div class="cards-container">
-                                <h2 class="cards-title">Видання Limited Edition</h2>
-                                <p class="cards-text">Дизайн</p>
+                            <div class="card-list__container">
+                                <h2 class="card-list__title">Проєкт LAB</h2>
+                                <p class="card-list__text">Маркетинг</p>
                             </div>
                         </a>
                     </li>
-                    <li class="cards-item">
-                        <a class="portfolio-link link" href="">
-                            <div class="bloc-cards-image">
-                                <img class="cards-image" src="./img/portfolio/img-7.jpg" alt="бірка з написами"
-                                    width="370">
-                                <p class="cards-overlay-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                    Cumque quis sed veritatis nisi deserunt et, totam magni aliquid quos blanditiis
-                                    placeat quas sequi, repellendus culpa soluta eum eaque in non?</p>
-                            </div>
-                            <div class="cards-container">
-                                <h2 class="cards-title">Проєкт <span class="uppercase">LAB</span></h2>
-                                <p class="cards-text">Маркетинг</p>
-                            </div>
-                        </a>
-                    </li>
-                    <li class="cards-item">
-                        <a class="portfolio-link link" href="">
-                            <div class="bloc-cards-image">
-                                <img class="cards-image" src="./img/portfolio/img-8.jpg"
+                    <li class="card-list__item">
+                        <a class="card-list__link link" href="">
+                            <div class="card-list__block">
+                                <img class="card-list__image" src="./img/portfolio/img-8.jpg"
                                     alt="людина працює за ноутбуком" width="370">
-                                <p class="cards-overlay-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                <p class="card-list__overlay-text">Lorem ipsum dolor sit amet consectetur adipisicing
+                                    elit.
                                     Cumque quis sed veritatis nisi deserunt et, totam magni aliquid quos blanditiis
                                     placeat quas sequi, repellendus culpa soluta eum eaque in non?</p>
                             </div>
-                            <div class="cards-container">
-                                <h2 class="cards-title">Growing Business</h2>
-                                <p class="cards-text">Додаток</p>
+                            <div class="card-list__container">
+                                <h2 class="card-list__title">Growing Business</h2>
+                                <p class="card-list__text">Додаток</p>
                             </div>
                         </a>
                     </li>
