--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
                 <ul class="contacts-list list ">
                     <li class="contacts-list__item"><a class="contacts-list__link link" href="mailto:info@devstudio.com"
                             lang="en">
-                            <svg class="contacts-list__logo-icon" width="16" height="12">
+                            <svg class="contacts-list__logo" width="16" height="12">
                                 <use href="./img/icons.svg#icon-mail"></use>
                             </svg>info@devstudio.com
                         </a></li>
                     <li class="contacts-list__item"><a class="contacts-list__link link" href="tel:+380961111111">
-                            <svg class="contacts-list__logo-icon" width="10" height="16">
+                            <svg class="contacts-list__logo" width="10" height="16">
                                 <use href="./img/icons.svg#icon-phone"></use>
                             </svg>+38 096 111 11 11
                         </a>
@@ -63,7 +63,7 @@
                 <ul class="features-section__list list">
                     <li class="features-section__item">
                         <div class="features-section__icon">
-                            <svg class="features-section__icon-antenna" width="70px" height="70px">
+                            <svg width="70px" height="70px">
                                 <use href="./img/icons.svg#icon-antenna"></use>
                             </svg>
                         </div>
@@ -74,7 +74,7 @@
                     </li>
                     <li class="features-section__item">
                         <div class="features-section__icon">
-                            <svg class="features-section__icon-clock" width="70px" height="70px">
+                            <svg width="70px" height="70px">
                                 <use href="./img/icons.svg#icon-clock"></use>
                             </svg>
                         </div>
@@ -86,7 +86,7 @@
                     </li>
                     <li class="features-section__item">
                         <div class="features-section__icon">
-                            <svg class="features-section__icon-diagram" width="70px" height="70px">
+                            <svg width="70px" height="70px">
                                 <use href="./img/icons.svg#icon-diagram"></use>
                             </svg>
                         </div>
@@ -97,7 +97,7 @@
                     </li>
                     <li class="features-section__item">
                         <div class="features-section__icon">
-                            <svg class="features-section__icon-astronaut" width="70px" height="70px">
+                            <svg width="70px" height="70px">
                                 <use href="./img/icons.svg#icon-astronaut"></use>
                             </svg>
                         </div>
@@ -115,20 +115,18 @@
             <div class="container">
                 <h2 class="title">Чим ми займаємося</h2>
                 <ul class="about-section__list list">
-                    <li class="about-section__item">
-                        <div class="about-section__image-container"><img class="about-section__image"
-                                src="./img/block-diagrams.jpg" alt="блок-схеми" width="370">
+                    <li>
+                        <div><img class="about-section__image" src="./img/block-diagrams.jpg" alt="блок-схеми"
+                                width="370">
                         </div>
                         <p class="about-section__text">Десктопні додатки</p>
                     </li>
-                    <li class="about-section__item">
-                        <div class="about-section__image-container"><img class="about-section__image"
-                                src="./img/layouts.jpg" alt="макети" width="370"></div>
+                    <li>
+                        <div><img class="about-section__image" src="./img/layouts.jpg" alt="макети" width="370"></div>
                         <p class="about-section__text">Мобільні додатки</p>
                     </li>
-                    <li class="about-section__item">
-                        <div class="about-section__image-container"><img class="about-section__image"
-                                src="./img/design.jpg" alt="дизайн" width="370"></div>
+                    <li>
+                        <div><img class="about-section__image" src="./img/design.jpg" alt="дизайн" width="370"></div>
                         <p class="about-section__text">Дизайнерські рішення</p>
 
                     </li>
@@ -147,20 +145,20 @@
                             <h3 class="team-list__title">Ігор Дем'яненко</h3>
                             <p class="team-list__text">Product Designer</p>
                             <ul class="net-list list">
-                                <li class="net-list__item"><a href="" class="net-list__link"><svg class="net-list__icon"
-                                            width="20" height="20">
+                                <li><a href="" class="net-list__link"><svg class="net-list__icon" width="20"
+                                            height="20">
                                             <use href="./img/icons.svg#icon-instagram"></use>
                                         </svg></a></li>
-                                <li class="net-list__item"><a href="" class="net-list__link"><svg class="net-list__icon"
-                                            width="20" height="20">
+                                <li><a href="" class="net-list__link"><svg class="net-list__icon" width="20"
+                                            height="20">
                                             <use href="./img/icons.svg#icon-twitter"></use>
                                         </svg></a></li>
-                                <li class="net-list__item"><a href="" class="net-list__link"><svg class="net-list__icon"
-                                            width="20" height="20">
+                                <li><a href="" class="net-list__link"><svg class="net-list__icon" width="20"
+                                            height="20">
                                             <use href="./img/icons.svg#icon-facebook"></use>
                                         </svg></a></li>
-                                <li class="net-list__item"><a href="" class="net-list__link"><svg class="net-list__icon"
-                                            width="20" height="20">
+                                <li><a href="" class="net-list__link"><svg class="net-list__icon" width="20"
+                                            height="20">
                                             <use href="./img/icons.svg#icon-linkedin"></use>
                                         </svg></a></li>
                             </ul>
@@ -173,20 +171,20 @@
                             <h3 class="team-list__title">Ольга Рєпіна</h3>
                             <p class="team-list__text">Frontend Developer</p>
                             <ul class="net-list list">
-                                <li class="net-list__item"><a href="" class="net-list__link"><svg class="net-list__icon"
-                                            width="20" height="20">
+                                <li><a href="" class="net-list__link"><svg class="net-list__icon" width="20"
+                                            height="20">
                                             <use href="./img/icons.svg#icon-instagram"></use>
                                         </svg></a></li>
-                                <li class="net-list__item"><a href="" class="net-list__link"><svg class="net-list__icon"
-                                            width="20" height="20">
+                                <li><a href="" class="net-list__link"><svg class="net-list__icon" width="20"
+                                            height="20">
                                             <use href="./img/icons.svg#icon-twitter"></use>
                                         </svg></a></li>
-                                <li class="net-list__item"><a href="" class="net-list__link"><svg class="net-list__icon"
-                                            width="20" height="20">
+                                <li><a href="" class="net-list__link"><svg class="net-list__icon" width="20"
+                                            height="20">
                                             <use href="./img/icons.svg#icon-facebook"></use>
                                         </svg></a></li>
-                                <li class="net-list__item"><a href="" class="net-list__link"><svg class="net-list__icon"
-                                            width="20" height="20">
+                                <li><a href="" class="net-list__link"><svg class="net-list__icon" width="20"
+                                            height="20">
                                             <use href="./img/icons.svg#icon-linkedin"></use>
                                         </svg></a></li>
                             </ul>
@@ -199,20 +197,20 @@
                             <h3 class="team-list__title">Микола Тарасов</h3>
                             <p class="team-list__text">Marketing</p>
                             <ul class="net-list list">
-                                <li class="net-list__item"><a href="" class="net-list__link"><svg class="net-list__icon"
-                                            width="20" height="20">
+                                <li><a href="" class="net-list__link"><svg class="net-list__icon" width="20"
+                                            height="20">
                                             <use href="./img/icons.svg#icon-instagram"></use>
                                         </svg></a></li>
-                                <li class="net-list__item"><a href="" class="net-list__link"><svg class="net-list__icon"
-                                            width="20" height="20">
+                                <li><a href="" class="net-list__link"><svg class="net-list__icon" width="20"
+                                            height="20">
                                             <use href="./img/icons.svg#icon-twitter"></use>
                                         </svg></a></li>
-                                <li class="net-list__item"><a href="" class="net-list__link"><svg class="net-list__icon"
-                                            width="20" height="20">
+                                <li><a href="" class="net-list__link"><svg class="net-list__icon" width="20"
+                                            height="20">
                                             <use href="./img/icons.svg#icon-facebook"></use>
                                         </svg></a></li>
-                                <li class="net-list__item"><a href="" class="net-list__link"><svg class="net-list__icon"
-                                            width="20" height="20">
+                                <li><a href="" class="net-list__link"><svg class="net-list__icon" width="20"
+                                            height="20">
                                             <use href="./img/icons.svg#icon-linkedin"></use>
                                         </svg></a></li>
                             </ul>
@@ -225,20 +223,20 @@
                             <h3 class="team-list__title">Михайло Єрмаков</h3>
                             <p class="team-list__text">UI Designer</p>
                             <ul class="net-list list">
-                                <li class="net-list__item"><a href="" class="net-list__link"><svg class="net-list__icon"
-                                            width="20" height="20">
+                                <li><a href="" class="net-list__link"><svg class="net-list__icon" width="20"
+                                            height="20">
                                             <use href="./img/icons.svg#icon-instagram"></use>
                                         </svg></a></li>
-                                <li class="net-list__item"><a href="" class="net-list__link"><svg class="net-list__icon"
-                                            width="20" height="20">
+                                <li><a href="" class="net-list__link"><svg class="net-list__icon" width="20"
+                                            height="20">
                                             <use href="./img/icons.svg#icon-twitter"></use>
                                         </svg></a></li>
-                                <li class="net-list__item"><a href="" class="net-list__link"><svg class="net-list__icon"
-                                            width="20" height="20">
+                                <li><a href="" class="net-list__link"><svg class="net-list__icon" width="20"
+                                            height="20">
                                             <use href="./img/icons.svg#icon-facebook"></use>
                                         </svg></a></li>
-                                <li class="net-list__item"><a href="" class="net-list__link"><svg class="net-list__icon"
-                                            width="20" height="20">
+                                <li><a href="" class="net-list__link"><svg class="net-list__icon" width="20"
+                                            height="20">
                                             <use href="./img/icons.svg#icon-linkedin"></use>
                                         </svg></a></li>
                             </ul>
@@ -339,52 +337,52 @@
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
 
-            <button class="modal-close-button" type="button" data-modal-close><svg class="modal-icon" width="18"
+            <button class="modal__close-button" type="button" data-modal-close><svg class="modal-icon" width="18"
                     height="18">
                     <use href="./img/icons.svg#icon-close"></use>
                 </svg></button>
 
             <!-- form field -->
             <form class="contact-form">
-                <p class="form-text">Залиште свої дані, ми вам передзвонимо</p>
+                <p class="contact-form__text">Залиште свої дані, ми вам передзвонимо</p>
 
                 <label class="form-label" for="person-name">Ім'я</label>
-                <div class="form-control">
-                    <input class="form-input" id="person-name" type="text" name="person-name">
-                    <svg class="form-icon" width="18px" height="18px">
+                <div class="form-label__control">
+                    <input class="form-label__input" id="person-name" type="text" name="person-name">
+                    <svg class="form-label__icon" width="18px" height="18px">
                         <use href="./img/icons.svg#icon-person-form"></use>
                     </svg>
                 </div>
 
                 <label class="form-label" for="person-phone">Телефон</label>
-                <div class="form-control">
-                    <input class="form-input" id="person-phone" type="tel" name="person-phone">
-                    <svg class="form-icon" width="18px" height="18px">
+                <div class="form-label__control">
+                    <input class="form-label__input" id="person-phone" type="tel" name="person-phone">
+                    <svg class="form-label__icon" width="18px" height="18px">
                         <use href="./img/icons.svg#icon-phone-form"></use>
                     </svg>
                 </div>
 
                 <label class="form-label" for="person-email">Пошта</label>
-                <div class="form-control">
-                    <input class="form-input" id="person-email" type="email" name="person-email">
-                    <svg class="form-icon" width="18px" height="18px">
+                <div class="form-label__control">
+                    <input class="form-label__input" id="person-email" type="email" name="person-email">
+                    <svg class="form-label__icon" width="18px" height="18px">
                         <use href="./img/icons.svg#icon-email-form"></use>
                     </svg>
                 </div>
 
                 <!-- Comment -->
                 <label class="form-label" for="person-comment">Коментар</label>
-                <textarea class="form-textarea" id="person-comment" name="person-comment"
+                <textarea class="form-label__textarea" id="person-comment" name="person-comment"
                     placeholder="Введіть текст"></textarea>
 
                 <!-- Checkbox -->
                 <div class="checkbox">
-                    <input class="checkbox-input visually-hidden" id="terms-checkbox" type="checkbox"
+                    <input class="checkbox__input visually-hidden" id="terms-checkbox" type="checkbox"
                         name="terms-checkbox">
-                    <svg class="checkbox-icon" width="16px" height="15px">
+                    <svg class="checkbox__icon" width="16px" height="15px">
                         <use href="./img/icons.svg#icon-check-form"></use>
                     </svg>
-                    <label class="checkbox-label" for="terms-checkbox">Погоджуюся з розсилкою та приймаю <a
+                    <label class="checkbox__label" for="terms-checkbox">Погоджуюся з розсилкою та приймаю <a
                             class="terms-link" href="#">Умови договору</a>
                     </label>
                 </div>
