--- a/portfolio.html
+++ b/portfolio.html
@@ -34,12 +34,12 @@
                 <ul class="contacts-list list">
                     <li class="contacts-list__item"><a class="contacts-list__link link" href="mailto:info@devstudio.com"
                             lang="en">
-                            <svg class="contacts-list__logo-icon" width="16" height="12">
+                            <svg class="contacts-list__logo" width="16" height="12">
                                 <use href="./img/icons.svg#icon-mail"></use>
                             </svg>info@devstudio.com
                         </a></li>
                     <li class="contacts-list__item"><a class="contacts-list__link link" href="tel:+380961111111">
-                            <svg class="contacts-list__logo-icon" width="10" height="16">
+                            <svg class="contacts-list__logo" width="10" height="16">
                                 <use href="./img/icons.svg#icon-phone"></use>
                             </svg>+38 096 111 11 11
                         </a>
