bem validator ok

--- a/index.html
+++ b/index.html
@@ -347,32 +347,32 @@
                 <p class="contact-form__text">Залиште свої дані, ми вам передзвонимо</p>
 
                 <label class="form-label" for="person-name">Ім'я</label>
-                <div class="form-label__control">
-                    <input class="form-label__input" id="person-name" type="text" name="person-name">
-                    <svg class="form-label__icon" width="18px" height="18px">
+                <div class="form-control">
+                    <input class="form-control__input" id="person-name" type="text" name="person-name">
+                    <svg class="form-control__icon" width="18px" height="18px">
                         <use href="./img/icons.svg#icon-person-form"></use>
                     </svg>
                 </div>
 
                 <label class="form-label" for="person-phone">Телефон</label>
-                <div class="form-label__control">
-                    <input class="form-label__input" id="person-phone" type="tel" name="person-phone">
-                    <svg class="form-label__icon" width="18px" height="18px">
+                <div class="form-control">
+                    <input class="form-control__input" id="person-phone" type="tel" name="person-phone">
+                    <svg class="form-control__icon" width="18px" height="18px">
                         <use href="./img/icons.svg#icon-phone-form"></use>
                     </svg>
                 </div>
 
                 <label class="form-label" for="person-email">Пошта</label>
-                <div class="form-label__control">
-                    <input class="form-label__input" id="person-email" type="email" name="person-email">
-                    <svg class="form-label__icon" width="18px" height="18px">
+                <div class="form-control">
+                    <input class="form-control__input" id="person-email" type="email" name="person-email">
+                    <svg class="form-control__icon" width="18px" height="18px">
                         <use href="./img/icons.svg#icon-email-form"></use>
                     </svg>
                 </div>
 
                 <!-- Comment -->
                 <label class="form-label" for="person-comment">Коментар</label>
-                <textarea class="form-label__textarea" id="person-comment" name="person-comment"
+                <textarea class="form-textarea" id="person-comment" name="person-comment"
                     placeholder="Введіть текст"></textarea>
 
                 <!-- Checkbox -->
