--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
         rel="stylesheet">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
-    <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
 
@@ -383,7 +382,7 @@
                         <use href="./img/icons.svg#icon-check-form"></use>
                     </svg>
                     <label class="checkbox__label" for="terms-checkbox">Погоджуюся з розсилкою та приймаю <a
-                            class="terms-link" href="#">Умови договору</a>
+                            class="checkbox__link" href="#">Умови договору</a>
                     </label>
                 </div>
 
