--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
         <section class="hero">
             <div class="container">
                 <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
-                <button class="primary-button" type="button" data-modal-open>Замовити послугу</button>
+                <button class="primary-button hero__primary-button" type="button" data-modal-open>Замовити
+                    послугу</button>
             </div>
         </section>
         <!-- features title -->
