--- a/index.html
+++ b/index.html
@@ -282,16 +282,17 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-box">
-                <div class="footer-container">
+                <div class="footer-address">
                     <a href="./index.html" class="logo link">Web<span class="footer__logo">Studio</span></a>
                     <address class="address">
-                        <ul class="address__list list">
-                            <li class="address__item"><a class="address__link-map link"
+                        <ul class="footer-address__list list">
+                            <li class="footer-address__item"><a class="footer-address__link-map link"
                                     href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank"
                                     rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a></li>
-                            <li class="address__item"><a class="address__link link" href="mailto:info@devstudio.com"
-                                    lang="en">info@devstudio.com</a></li>
-                            <li class="address__item"><a class="address__link link" href="tel:+380961111111">+38 096 111
+                            <li class="footer-address__item"><a class="footer-address__link link"
+                                    href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a></li>
+                            <li class="footer-address__item"><a class="footer-address__link link"
+                                    href="tel:+380961111111">+38 096 111
                                     11
                                     11</a>
                             </li>
