--- a/portfolio.html
+++ b/portfolio.html
@@ -53,11 +53,11 @@
             <div class="container">
                 <h1 class="visually-hidden">Portfolio</h1>
                 <ul class="filter-list list">
-                    <li><button class="filter-button" type="button">Усі</button></li>
-                    <li><button class="filter-button" type="button">Веб-сайти</button></li>
-                    <li><button class="filter-button" type="button">Додатки</button></li>
-                    <li><button class="filter-button" type="button">Дизайн</button></li>
-                    <li><button class="filter-button" type="button">Маркетинг</button></li>
+                    <li><button class="filter-list__button" type="button">Усі</button></li>
+                    <li><button class="filter-list__button" type="button">Веб-сайти</button></li>
+                    <li><button class="filter-list__button" type="button">Додатки</button></li>
+                    <li><button class="filter-list__button" type="button">Дизайн</button></li>
+                    <li><button class="filter-list__button" type="button">Маркетинг</button></li>
                 </ul>
                 <!-- cards-list -->
                 <ul class="card-list list">
@@ -212,16 +212,17 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-box">
-                <div class="footer-container">
+                <div class="footer-address">
                     <a href="./index.html" class="logo link">Web<span class="footer__logo">Studio</span></a>
                     <address class="address">
-                        <ul class="address__list list">
-                            <li class="address__item"><a class="address__link-map link"
+                        <ul class="footer-address__list list">
+                            <li class="footer-address__item"><a class="footer-address__link-map link"
                                     href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank"
                                     rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a></li>
-                            <li class="address__item"><a class="address__link link" href="mailto:info@devstudio.com"
-                                    lang="en">info@devstudio.com</a></li>
-                            <li class="address__item"><a class="address__link link" href="tel:+380961111111">+38 096 111
+                            <li class="footer-address__item"><a class="footer-address__link link"
+                                    href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a></li>
+                            <li class="footer-address__item"><a class="footer-address__link link"
+                                    href="tel:+380961111111">+38 096 111
                                     11
                                     11</a>
                             </li>
