--- a/index.html
+++ b/index.html
@@ -338,8 +338,7 @@
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
 
-            <button class="modal__close-button" type="button" data-modal-close><svg class="modal-icon" width="18"
-                    height="18">
+            <button class="close-button" type="button" data-modal-close><svg class="modal__icon" width="18" height="18">
                     <use href="./img/icons.svg#icon-close"></use>
                 </svg></button>
 
